style change - according to UI

--- a/index.html
+++ b/index.html
@@ -147,17 +147,20 @@
               </div>
               <div class="inputs">
                 <div>
-                  <label for="">Name</label>
+                  <label for="">Name<span>*</span></label>
                   <input type="text" />
                 </div>
                 <div>
-                  <label for="">Surname</label> <input type="text" required />
+                  <label for="">Surname<span>*</span></label>
+                  <input type="text" required />
                 </div>
                 <div>
-                  <label for="">E-mail</label> <input type="email" required />
+                  <label for="">E-mail<span>*</span></label>
+                  <input type="email" required />
                 </div>
                 <div>
-                  <label for="">Phone</label> <input type="text" required />
+                  <label for="">Phone<span>*</span></label>
+                  <input type="text" required />
                 </div>
               </div>
               <div class="total-info">
